@@ -60,6 +60,9 @@ configErrorDevHandle = "You have entered a wrong developer handle. Please use on
 configErrorLocal = "Could not read the Local Cookie configuration. Sorry :-/"
 configErrorIprange = "Wrong configuration for: 'output => iprange'! An empty IP list means that no one will be able to use kreXX. The configured setting was not applied!"
 configErrorMaxRuntimeBig = "Wrong configuration for: 'runtime => maxRuntime'! Maximum for this server is: %s The configured setting was not applied!"
+configErrorDebugBlacklist = "Wrong configuration for: '%s => %s'! The debugmethod '%s' is blacklisted. The configured setting was not applied!"
+configErrorDebugInvalid = "Wrong configuration for: '%s => %s'! '%s' is not a valid method. The configured setting was not applied!"
+
 php7 = "It looks like you are using PHP7. Fatal errors got removed in PHP7, meaning that they are now catchable like normal errors."
 php7yellow = "The fatal error handler does not work with PHP7!"
 
