@@ -147,7 +147,7 @@ class DebugMethods extends AbstractObjectAnalysis
         // 3.) It's not blacklisted.
         if (method_exists($data, $funcName) === true &&
             is_callable(array($data, $funcName)) === true &&
-            $this->pool->config->isAllowedDebugCall($data, $funcName) === true) {
+            $this->pool->config->isAllowedDebugCall($data) === true) {
             // We need to check if the callable function requires any parameters.
             // We will not call those, because we simply can not provide them.
             $ref = $reflectionClass->getMethod($funcName);
