@@ -81,6 +81,8 @@ class Codegen
     public function __construct(Pool $pool)
     {
         $this->pool = $pool;
+
+        $pool->codegenHandler = $this;
     }
 
     /**
