@@ -1,5 +1,9 @@
 3.0.1 dev
+- Change: All singelton classes now add themself to the pool as
+  soon as they are created.
 - Bugfix: Added the missing end event to the property analysis.
+- Bugfix / Change: Configured debug methods are now checked on
+  configuration loading.
 
 3.0.0
 - Added 'is' and 'has' to the getter analysis.
